--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,12 @@ dj-database-url==0.5.0
 Django==3.1.3
 djangorestframework==3.12.2
 gunicorn==20.0.4
+numpy==1.19.4
+pandas==1.1.4
 psycopg2-binary==2.8.6
+python-dateutil==2.8.1
 pytz==2020.4
+scipy==1.5.4
+six==1.15.0
 sqlparse==0.4.1
 whitenoise==5.2.0
